--- a/index.html
+++ b/index.html
@@ -14,7 +14,6 @@
       font-family: 'Barlow Condensed', sans-serif;
       color: #fff;
     }
-
     .form-container {
       background-color: rgba(0, 0, 0, 0.85);
       max-width: 720px;
@@ -23,16 +22,13 @@
       border-radius: 20px;
       box-shadow: 0 0 30px rgba(0,0,0,0.8);
     }
-
     .header-logo {
       text-align: center;
       margin-bottom: 10px;
     }
-
     .header-logo img {
       width: 220px;
     }
-
     h2 {
       text-align: center;
       font-size: 30px;
@@ -42,14 +38,12 @@
       text-transform: uppercase;
       letter-spacing: 1px;
     }
-
     label {
       display: block;
       margin: 16px 0 6px;
       font-size: 17px;
       font-weight: 600;
     }
-
     input, select {
       width: 100%;
       padding: 12px;
@@ -58,7 +52,6 @@
       margin-bottom: 8px;
       font-size: 16px;
     }
-
     button {
       background-color: #e53935;
       color: white;
@@ -71,11 +64,9 @@
       cursor: pointer;
       margin-top: 15px;
     }
-
     button:hover {
       background-color: #c62828;
     }
-
     .intro-text {
       background-color: rgba(255, 255, 255, 0.15);
       border: 2px solid #ffffff;
@@ -89,48 +80,18 @@
       color: #fff;
       box-shadow: 0 0 10px rgba(255,255,255,0.2);
     }
-
     .justwatch-link {
       text-align: center;
       margin-bottom: 20px;
       font-size: 17px;
     }
-
     .justwatch-link a {
       color: #4fc3f7;
       font-weight: bold;
       text-decoration: none;
     }
-
     .justwatch-link a:hover {
       text-decoration: underline;
-    }
-
-    @media (max-width: 600px) {
-      .form-container {
-        padding: 20px;
-        margin: 10px;
-        background-color: rgba(0, 0, 0, 0.6);
-      }
-
-      .intro-text {
-        font-size: 18px;
-        padding: 16px;
-      }
-
-      h2 {
-        font-size: 22px;
-      }
-
-      input, select {
-        font-size: 15px;
-        padding: 10px;
-      }
-
-      button {
-        font-size: 16px;
-        padding: 12px;
-      }
     }
   </style>
 </head>
@@ -152,7 +113,7 @@
       🔎 <a href="https://www.justwatch.com/br" target="_blank">Verifique a disponibilidade no JustWatch</a>
     </div>
 
-    <form id="pedidoForm">
+    <form id="formulario">
       <label for="usuario">Nome do Usuário</label>
       <input type="text" id="usuario" name="usuario" required>
 
@@ -182,37 +143,36 @@
   </div>
 
   <script>
-    const form = document.getElementById('pedidoForm');
-    form.addEventListener('submit', function(e) {
+    document.getElementById("formulario").addEventListener("submit", function(e) {
       e.preventDefault();
 
-      const dados = {
-        usuario: form.usuario.value,
-        numero: form.numero.value,
-        whatsapp: form.whatsapp.value,
-        titulo: form.titulo.value,
-        tipo: form.tipo.value,
-        episodio: form.episodio.value,
-        link: form.link.value
+      const data = {
+        usuario: document.getElementById("usuario").value,
+        numero: document.getElementById("numero").value,
+        whatsapp: document.getElementById("whatsapp").value,
+        titulo: document.getElementById("titulo").value,
+        tipo: document.getElementById("tipo").value,
+        episodio: document.getElementById("episodio").value,
+        link: document.getElementById("link").value
       };
 
-      fetch('https://script.google.com/macros/s/AKfycbzSiXRRpXcVo-qnQ_1ITCQe_xuXvVGGJGvsmr3yKvs1k6_HxCksyx2ud8Glgqf7Edw/exec', {
-        method: 'POST',
-        body: JSON.stringify(dados),
+      fetch("https://script.google.com/macros/s/AKfycbzSiXRRpXcVo-qnQ_1ITCQe_xuXvVGGJGvsmr3yKvs1k6_HxCksyx2ud8Glgqf7Edw/exec", {
+        method: "POST",
+        body: JSON.stringify(data),
         headers: {
-          'Content-Type': 'application/json'
+          "Content-Type": "application/json"
         }
       })
       .then(res => res.json())
-      .then(res => {
-        if (res.status === 'sucesso') {
-          window.location.href = 'sucesso.html'; // redireciona para a página bonita
+      .then(response => {
+        if (response.status === "sucesso") {
+          window.location.href = "sucesso.html";
         } else {
-          alert('Erro: ' + res.mensagem);
+          alert("Erro ao enviar: " + response.mensagem);
         }
       })
-      .catch(() => {
-        alert('Erro ao enviar. Verifique sua conexão e tente novamente.');
+      .catch(error => {
+        alert("Erro na conexão: " + error);
       });
     });
   </script>
