--- a/index.html
+++ b/index.html
@@ -143,37 +143,26 @@
   </div>
 
   <script>
-    document.getElementById("formulario").addEventListener("submit", function(e) {
-      e.preventDefault();
+    const formulario = document.getElementById("formulario");
 
-      const data = {
-        usuario: document.getElementById("usuario").value,
-        numero: document.getElementById("numero").value,
-        whatsapp: document.getElementById("whatsapp").value,
-        titulo: document.getElementById("titulo").value,
-        tipo: document.getElementById("tipo").value,
-        episodio: document.getElementById("episodio").value,
-        link: document.getElementById("link").value
-      };
+    formulario.addEventListener("submit", function(event) {
+      event.preventDefault();
+
+      const dados = new FormData(formulario);
 
       fetch("https://script.google.com/macros/s/AKfycbzSiXRRpXcVo-qnQ_1ITCQe_xuXvVGGJGvsmr3yKvs1k6_HxCksyx2ud8Glgqf7Edw/exec", {
         method: "POST",
-        body: JSON.stringify(data),
-        headers: {
-          "Content-Type": "application/json"
-        }
+        body: dados
       })
-      .then(res => res.json())
-      .then(response => {
-        if (response.status === "sucesso") {
+      .then(response => response.json())
+      .then(res => {
+        if (res.status === "sucesso") {
           window.location.href = "sucesso.html";
         } else {
-          alert("Erro ao enviar: " + response.mensagem);
+          alert("Erro: " + res.mensagem);
         }
       })
-      .catch(error => {
-        alert("Erro na conexão: " + error);
-      });
+      .catch(() => alert("Erro ao enviar o formulário. Tente novamente."));
     });
   </script>
 </body>
