--- a/index.html
+++ b/index.html
@@ -113,7 +113,11 @@
       🔎 <a href="https://www.justwatch.com/br" target="_blank">Verifique a disponibilidade no JustWatch</a>
     </div>
 
-    <form id="formulario">
+    <form 
+      action="https://script.google.com/macros/s/AKfycbzSiXRRpXcVo-qnQ_1ITCQe_xuXvVGGJGvsmr3yKvs1k6_HxCksyx2ud8Glgqf7Edw/exec" 
+      method="POST" 
+      onsubmit="return confirmarEnvio()"
+    >
       <label for="usuario">Nome do Usuário</label>
       <input type="text" id="usuario" name="usuario" required>
 
@@ -143,27 +147,10 @@
   </div>
 
   <script>
-    const formulario = document.getElementById("formulario");
-
-    formulario.addEventListener("submit", function(event) {
-      event.preventDefault();
-
-      const dados = new FormData(formulario);
-
-      fetch("https://script.google.com/macros/s/AKfycbzSiXRRpXcVo-qnQ_1ITCQe_xuXvVGGJGvsmr3yKvs1k6_HxCksyx2ud8Glgqf7Edw/exec", {
-        method: "POST",
-        body: dados
-      })
-      .then(response => response.json())
-      .then(res => {
-        if (res.status === "sucesso") {
-          window.location.href = "sucesso.html";
-        } else {
-          alert("Erro: " + res.mensagem);
-        }
-      })
-      .catch(() => alert("Erro ao enviar o formulário. Tente novamente."));
-    });
+    function confirmarEnvio() {
+      alert("✅ Pedido enviado com sucesso!");
+      return true;
+    }
   </script>
 </body>
 </html>
