--- a/index.html
+++ b/index.html
@@ -113,11 +113,7 @@
       🔎 <a href="https://www.justwatch.com/br" target="_blank">Verifique a disponibilidade no JustWatch</a>
     </div>
 
-    <form 
-      action="https://script.google.com/macros/s/AKfycbzSiXRRpXcVo-qnQ_1ITCQe_xuXvVGGJGvsmr3yKvs1k6_HxCksyx2ud8Glgqf7Edw/exec" 
-      method="POST" 
-      onsubmit="return confirmarEnvio()"
-    >
+    <form action="https://script.google.com/macros/s/AKfycbzSiXRRpXcVo-qnQ_1ITCQe_xuXvVGGJGvsmr3yKvs1k6_HxCksyx2ud8Glgqf7Edw/exec" method="POST">
       <label for="usuario">Nome do Usuário</label>
       <input type="text" id="usuario" name="usuario" required>
 
@@ -145,12 +141,5 @@
       <button type="submit">📨 PEDIR CONTEÚDO</button>
     </form>
   </div>
-
-  <script>
-    function confirmarEnvio() {
-      alert("✅ Pedido enviado com sucesso!");
-      return true;
-    }
-  </script>
 </body>
 </html>
