--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
     .justwatch-link a:hover {
       text-decoration: underline;
     }
-    .success-message {
+    .mensagem-sucesso {
       display: none;
       background-color: #1b5e20;
       padding: 30px;
@@ -125,12 +125,7 @@
       🔎 <a href="https://www.justwatch.com/br" target="_blank">Verifique a disponibilidade no JustWatch</a>
     </div>
 
-    <form id="formulario"
-      action="https://script.google.com/macros/s/AKfycbzfMbhYFxEmPAnZF3Lg4bc706eEPbz0SB5DgXqMI-C_JyvqXNxXr7K-OKDO4s-yDB0/exec"
-      method="POST"
-      target="invisible_iframe"
-      onsubmit="mostrarMensagem()">
-      
+    <form id="formulario" action="https://script.google.com/macros/s/AKfycbzfMbhYFxEmPAnZF3Lg4bc706eEPbz0SB5DgXqMI-C_JyvqXNxXr7K-OKDO4s-yDB0/exec" method="POST" target="invisible_iframe" onsubmit="mostrarMensagem()">
       <label for="usuario">Nome do Usuário</label>
       <input type="text" id="usuario" name="usuario" required>
 
@@ -158,7 +153,7 @@
       <button type="submit">📨 PEDIR CONTEÚDO</button>
     </form>
 
-    <div class="success-message" id="mensagemSucesso">
+    <div class="mensagem-sucesso" id="mensagemSucesso">
       ✅ Pedido enviado com sucesso!<br><br>
       Acompanhe seu conteúdo em breve.
     </div>
