--- a/index.html
+++ b/index.html
@@ -93,17 +93,12 @@
     .justwatch-link a:hover {
       text-decoration: underline;
     }
-    .mensagem-sucesso {
-      display: none;
-      background-color: #1b5e20;
-      padding: 30px;
-      border-radius: 12px;
+    .success-message {
       text-align: center;
-      color: #fff;
-      font-size: 22px;
+      font-size: 20px;
       font-weight: bold;
-      box-shadow: 0 0 10px rgba(0,0,0,0.3);
-      margin-top: 30px;
+      color: #00e676;
+      margin-top: 20px;
     }
   </style>
 </head>
@@ -125,7 +120,7 @@
       🔎 <a href="https://www.justwatch.com/br" target="_blank">Verifique a disponibilidade no JustWatch</a>
     </div>
 
-    <form id="formulario" action="https://script.google.com/macros/s/AKfycbzfMbhYFxEmPAnZF3Lg4bc706eEPbz0SB5DgXqMI-C_JyvqXNxXr7K-OKDO4s-yDB0/exec" method="POST" target="invisible_iframe" onsubmit="mostrarMensagem()">
+    <form id="formulario" action="https://script.google.com/macros/s/AKfycbxEZyVS-uX2yxJEUHdrG_2IdVaaSd2w74Thcs36XStqh6zb6t08BUolo0kqMZkd5t-i/exec" method="POST">
       <label for="usuario">Nome do Usuário</label>
       <input type="text" id="usuario" name="usuario" required>
 
@@ -153,19 +148,30 @@
       <button type="submit">📨 PEDIR CONTEÚDO</button>
     </form>
 
-    <div class="mensagem-sucesso" id="mensagemSucesso">
-      ✅ Pedido enviado com sucesso!<br><br>
-      Acompanhe seu conteúdo em breve.
-    </div>
-
-    <iframe name="invisible_iframe" style="display:none;"></iframe>
+    <div class="success-message" id="mensagem"></div>
   </div>
 
   <script>
-    function mostrarMensagem() {
-      document.getElementById("formulario").style.display = "none";
-      document.getElementById("mensagemSucesso").style.display = "block";
-    }
+    const formulario = document.getElementById("formulario");
+    const mensagem = document.getElementById("mensagem");
+
+    formulario.addEventListener("submit", function(e) {
+      e.preventDefault();
+      const dados = new FormData(formulario);
+
+      fetch(formulario.action, {
+        method: "POST",
+        body: dados
+      })
+      .then(response => response.text())
+      .then(msg => {
+        mensagem.innerText = "✅ Pedido enviado com sucesso!";
+        formulario.reset();
+      })
+      .catch(error => {
+        mensagem.innerText = "❌ Erro ao enviar. Tente novamente.";
+      });
+    });
   </script>
 </body>
 </html>
