--- a/index.html
+++ b/index.html
@@ -93,18 +93,6 @@
     .justwatch-link a:hover {
       text-decoration: underline;
     }
-    #retorno {
-      margin: 8px;
-      padding: 15px;
-      background-color: rgba(0, 255, 0, 0.1);
-      border-radius: 10px;
-      text-align: center;
-      font-weight: bold;
-      font-size: 18px;
-      display: none;
-      color: #00e676;
-      box-shadow: 0 0 10px rgba(0,255,0,0.2);
-    }
   </style>
 </head>
 <body>
@@ -125,7 +113,7 @@
       🔎 <a href="https://www.justwatch.com/br" target="_blank">Verifique a disponibilidade no JustWatch</a>
     </div>
 
-    <form id="formulario" action="https://script.google.com/macros/s/AKfycbwe5iW7EQhD5iJtNdTA2pj39eA1kxJqwWrE2j9n4c_c226mO35usxgbI_2F8tdkIba2/exec" method="POST" target="iframeRetorno">
+    <form method="POST" action="https://script.google.com/macros/s/AKfycbwsydraNLEDUQfMJAJXFR5H0qQqiZZiidzn4ikO6NDRnqvW1yAlm866GH9ML3VV8IMq/exec">
       <label for="usuario">Nome do Usuário</label>
       <input type="text" id="usuario" name="usuario" required>
 
@@ -152,25 +140,6 @@
 
       <button type="submit">📨 PEDIR CONTEÚDO</button>
     </form>
-
-    <iframe name="iframeRetorno" style="display:none;"></iframe>
-
-    <div id="retorno">✅ Pedido enviado com sucesso!</div>
   </div>
-
-  <script>
-    const form = document.getElementById("formulario");
-    const retorno = document.getElementById("retorno");
-
-    form.addEventListener("submit", function () {
-      setTimeout(() => {
-        retorno.style.display = "block";
-        form.reset();
-        setTimeout(() => {
-          retorno.style.display = "none";
-        }, 5000); // desaparece após 5 segundos
-      }, 1500); // tempo para resposta do iframe
-    });
-  </script>
 </body>
 </html>
